[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scenes/Foes/Maguito/EnemyMaguito.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Foes/Maguito/Bala.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Components/SpriteAnimatedController.tscn" type="PackedScene" id=3]
[ext_resource path="res://Art/Foes/Maguito/Ataque/Ataque1.png" type="Texture" id=4]
[ext_resource path="res://Art/Foes/Maguito/Ataque/Ataque2.png" type="Texture" id=5]
[ext_resource path="res://Art/Foes/Maguito/Ataque/Ataque3.png" type="Texture" id=6]
[ext_resource path="res://Art/Foes/Maguito/Ataque/Ataque4.png" type="Texture" id=7]
[ext_resource path="res://Art/Foes/Maguito/Ataque/Ataque5.png" type="Texture" id=8]
[ext_resource path="res://Art/Foes/Maguito/Ataque/Ataque6.png" type="Texture" id=9]
[ext_resource path="res://Art/Foes/Maguito/Ataque/Ataque9.png" type="Texture" id=10]
[ext_resource path="res://Art/Foes/Maguito/Ataque/Ataque7.png" type="Texture" id=11]
[ext_resource path="res://Art/Foes/Maguito/Ataque/Ataque8.png" type="Texture" id=12]
[ext_resource path="res://Art/Foes/Maguito/Normal/rogue like idle_Animation 1_0.png" type="Texture" id=13]
[ext_resource path="res://Art/Foes/Maguito/Normal/rogue like idle_Animation 1_2.png" type="Texture" id=14]
[ext_resource path="res://Art/Foes/Maguito/Normal/rogue like idle_Animation 1_1.png" type="Texture" id=15]
[ext_resource path="res://Art/Foes/Maguito/Muerte/Muerte1.png" type="Texture" id=16]
[ext_resource path="res://Art/Foes/Maguito/Muerte/Muerte2.png" type="Texture" id=17]
[ext_resource path="res://Art/Foes/Maguito/Muerte/Muerte3.png" type="Texture" id=18]
[ext_resource path="res://Art/Foes/Maguito/Muerte/Muerte4.png" type="Texture" id=19]
[ext_resource path="res://Art/Foes/Maguito/Muerte/Muerte5.png" type="Texture" id=20]
[ext_resource path="res://Art/Foes/Maguito/Caminando/rogue like run_Animation 1_0.png" type="Texture" id=21]
[ext_resource path="res://Art/Foes/Maguito/Caminando/rogue like run_Animation 1_1.png" type="Texture" id=22]
[ext_resource path="res://Art/Foes/Maguito/Caminando/rogue like run_Animation 1_2.png" type="Texture" id=23]
[ext_resource path="res://Art/Foes/Maguito/Caminando/rogue like run_Animation 1_3.png" type="Texture" id=24]
[ext_resource path="res://Art/Foes/Maguito/Caminando/rogue like run_Animation 1_4.png" type="Texture" id=25]
[ext_resource path="res://Art/Foes/Maguito/Caminando/rogue like run_Animation 1_5.png" type="Texture" id=26]
[ext_resource path="res://Scenes/Components/CharacterController.tscn" type="PackedScene" id=27]
[ext_resource path="res://Scenes/Components/Life.tscn" type="PackedScene" id=28]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": false,
"name": "Ataque",
"speed": 20.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "Normal",
"speed": 8.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 13 ) ],
"loop": true,
"name": "Golpeado",
"speed": 8.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": false,
"name": "Muerte",
"speed": 8.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "Caminando",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 10.0
height = 19.3395

[node name="EnemyMaguito" type="KinematicBody2D"]

scale = Vector2( 1.10522, 1.10522 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
bala = ExtResource( 2 )
puntaje = 100

[node name="AnimatedSpriteController" parent="." index="0" instance=ExtResource( 3 )]

[node name="AnimatedSprite" type="AnimatedSprite" parent="AnimatedSpriteController" index="0"]

frames = SubResource( 1 )
animation = "Normal"
frame = 2
playing = true
flip_h = true

[node name="CharacterController" parent="." index="1" instance=ExtResource( 27 )]

velocidadMovimiento = 2.5
salto = 10.0
gravedad = 10.0

[node name="rayder" type="RayCast2D" parent="." index="2"]

enabled = true
exclude_parent = true
cast_to = Vector2( 250, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="rayizq" type="RayCast2D" parent="." index="3"]

enabled = true
exclude_parent = true
cast_to = Vector2( -250, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="rayAtaqueDer" type="RayCast2D" parent="." index="4"]

enabled = true
exclude_parent = true
cast_to = Vector2( 100, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="rayAtaqueIzq" type="RayCast2D" parent="." index="5"]

enabled = true
exclude_parent = true
cast_to = Vector2( -100, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Life" parent="." index="6" instance=ExtResource( 28 )]

position = Vector2( 9.57977, 0.59874 )
vida = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="7"]

shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]


